<resources>
    <string name="app_name">BookApp</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="sign_up">Sign up</string>
    <string name="hi">Hi!</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="confirme_password">Confirme Password</string>
    <string name="already_have_account">Already have account</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorie">Categorie</string>
    <string name="profile">Profile</string>
    <string name="article_text">github.com/LOUQLIAIMARIAM/Book_App</string>

</resources>