<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="15dp"
        android:text="@string/welcome"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="ExtraText,MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in_to_continue"
        android:textSize="20sp"
        android:textStyle="italic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/backgroundedit"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/backgroundedit"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/forget_password"
       />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:text="@string/don_t_have_account"
       />

    <TextView
        android:id="@+id/signupRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="15sp"
        />
    </LinearLayout>

</LinearLayout>